tests/negative/m34_incompatible_function.c
int compute(void);
char compute(void);
int main(void) { return compute(); }
